Minor stability improvements
* Restructured some code and added a lot of code documentation.
* Upgraded all consumed libraries.