@@ -14,9 +14,9 @@ import com.underscoreresearch.backup.block.assignments.LargeFileBlockAssignment;
 import com.underscoreresearch.backup.block.assignments.RawLargeFileBlockAssignment;
 import com.underscoreresearch.backup.block.assignments.ZipSmallBlockAssignment;
 import com.underscoreresearch.backup.block.implementation.FileBlockUploaderImpl;
-import com.underscoreresearch.backup.cli.helpers.BlockValidator;
-import com.underscoreresearch.backup.cli.helpers.DestinationBlockProcessor;
-import com.underscoreresearch.backup.cli.helpers.RepositoryTrimmer;
+import com.underscoreresearch.backup.ui.helpers.BlockValidator;
+import com.underscoreresearch.backup.ui.helpers.DestinationBlockProcessor;
+import com.underscoreresearch.backup.ui.helpers.RepositoryTrimmer;
 import com.underscoreresearch.backup.encryption.EncryptionIdentity;
 import com.underscoreresearch.backup.file.ContinuousBackup;
 import com.underscoreresearch.backup.file.FileChangeWatcher;
@@ -49,8 +49,8 @@ import com.underscoreresearch.backup.manifest.implementation.AdditionalManifestM
 import com.underscoreresearch.backup.manifest.implementation.LoggingMetadataRepository;
 import com.underscoreresearch.backup.manifest.implementation.ManifestManagerImpl;
 import com.underscoreresearch.backup.model.BackupConfiguration;
-import com.underscoreresearch.backup.utils.StateLogger;
-import com.underscoreresearch.backup.utils.state.MachineState;
+import com.underscoreresearch.backup.utils.log.StateLogger;
+import com.underscoreresearch.backup.machinestate.MachineState;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.lang3.SystemUtils;
@@ -72,16 +72,54 @@ import static com.underscoreresearch.backup.configuration.CommandLineModule.NO_D
 import static com.underscoreresearch.backup.configuration.CommandLineModule.SOURCE_CONFIG;
 import static com.underscoreresearch.backup.configuration.RestoreModule.DOWNLOAD_THREADS;
 import static com.underscoreresearch.backup.io.IOUtils.createDirectory;
-import static com.underscoreresearch.backup.utils.LogUtil.debug;
+import static com.underscoreresearch.backup.utils.log.LogUtil.debug;
 
+/**
+ * Guice module for configuring backup-related dependencies.
+ * This module provides the necessary bindings for the backup functionality,
+ * including file scanning, block assignments, metadata repositories, and more.
+ */
 @Slf4j
 public class BackupModule extends AbstractModule {
+    /**
+     * Default maximum size for large blocks in bytes.
+     */
     public static final int DEFAULT_LARGE_MAXIMUM_SIZE = 8 * 1024 * 1024 - 10 * 1024;
+    
+    /**
+     * Named constant for repository database path.
+     */
     public static final String REPOSITORY_DB_PATH = "REPOSITORY_DB_PATH";
+    
+    /**
+     * Default target size for small files in bytes.
+     */
     private static final int DEFAULT_SMALL_FILE_TARGET_SIZE = DEFAULT_LARGE_MAXIMUM_SIZE;
+    
+    /**
+     * Default maximum size for small files in bytes.
+     */
     private static final int DEFAULT_SMALL_FILE_MAXIMUM_SIZE = DEFAULT_SMALL_FILE_TARGET_SIZE / 2;
+    
+    /**
+     * Default number of upload threads.
+     */
     private static final int DEFAULT_UPLOAD_THREADS = 4;
 
+    /**
+     * Provides a singleton ScannerSchedulerImpl instance.
+     *
+     * @param configuration The backup configuration
+     * @param repository The metadata repository
+     * @param repositoryTrimmer The repository trimmer
+     * @param scanner The file scanner
+     * @param stateLogger The state logger
+     * @param fileChangeWatcher The file change watcher
+     * @param continuousBackup The continuous backup service
+     * @param backupStatsLogger The backup stats logger
+     * @param parser The command line parser
+     * @return A configured ScannerSchedulerImpl instance
+     */
     @Singleton
     @Provides
     public ScannerSchedulerImpl scannerScheduler(BackupConfiguration configuration,
@@ -95,15 +133,29 @@ public class BackupModule extends AbstractModule {
                                                  CommandLine parser) {
         return new ScannerSchedulerImpl(configuration, repository, repositoryTrimmer, scanner, stateLogger,
                 fileChangeWatcher, continuousBackup, backupStatsLogger,
-                parser.getArgList().size() > 0 && "interactive".equals(parser.getArgList().get(0)));
+                !parser.getArgList().isEmpty() && "interactive".equals(parser.getArgList().getFirst()));
     }
 
+    /**
+     * Provides a singleton ScannerScheduler instance.
+     *
+     * @param scannerScheduler The ScannerSchedulerImpl instance
+     * @return The ScannerScheduler interface implementation
+     */
     @Singleton
     @Provides
     public ScannerScheduler scannerScheduler(ScannerSchedulerImpl scannerScheduler) {
         return scannerScheduler;
     }
 
+    /**
+     * Provides a singleton RepositoryTrimmer instance.
+     *
+     * @param repository The metadata repository
+     * @param configuration The backup configuration
+     * @param manifestManager The manifest manager
+     * @return A configured RepositoryTrimmer instance
+     */
     @Singleton
     @Provides
     public RepositoryTrimmer metadataTrimmer(MetadataRepository repository,
@@ -112,12 +164,29 @@ public class BackupModule extends AbstractModule {
         return new RepositoryTrimmer(repository, configuration, manifestManager, false);
     }
 
+    /**
+     * Provides a singleton FileScanner instance.
+     *
+     * @param scanner The FileScannerImpl instance
+     * @return The FileScanner interface implementation
+     */
     @Singleton
     @Provides
     public FileScanner fileScanner(FileScannerImpl scanner) {
         return scanner;
     }
 
+    /**
+     * Provides a singleton FileScannerImpl instance.
+     *
+     * @param repository The metadata repository
+     * @param fileConsumer The file consumer
+     * @param access The file system access
+     * @param machineState The machine state
+     * @param debug Whether debug mode is enabled
+     * @param manifestLocation The manifest location
+     * @return A configured FileScannerImpl instance
+     */
     @Singleton
     @Provides
     public FileScannerImpl fileScanner(MetadataRepository repository, FileConsumer fileConsumer,
@@ -127,6 +196,14 @@ public class BackupModule extends AbstractModule {
         return new FileScannerImpl(repository, fileConsumer, access, machineState, debug, manifestLocation);
     }
 
+    /**
+     * Provides a singleton FileConsumer instance.
+     *
+     * @param repository The metadata repository
+     * @param smallFileBlockAssignment The small file block assignment
+     * @param largeFileBlockAssignment The large file block assignment
+     * @return A configured FileConsumer instance
+     */
     @Singleton
     @Provides
     public FileConsumer fileConsumer(MetadataRepository repository,
@@ -135,6 +212,17 @@ public class BackupModule extends AbstractModule {
         return new FileConsumerImpl(repository, Lists.newArrayList(smallFileBlockAssignment, largeFileBlockAssignment));
     }
 
+    /**
+     * Provides a singleton ZipSmallBlockAssignment instance.
+     *
+     * @param configuration The backup configuration
+     * @param blockDownloader The block downloader
+     * @param metadataRepository The metadata repository
+     * @param fileBlockUploader The file block uploader
+     * @param fileSystemAccess The file system access
+     * @param identity The encryption identity
+     * @return A configured ZipSmallBlockAssignment instance
+     */
     @Provides
     @Singleton
     public ZipSmallBlockAssignment zipFileBlockAssignment(BackupConfiguration configuration,
@@ -149,6 +237,17 @@ public class BackupModule extends AbstractModule {
                 configuration.getProperty("smallFileBlockAssignment.targetSize", DEFAULT_SMALL_FILE_TARGET_SIZE));
     }
 
+    /**
+     * Provides a singleton EncryptedSmallBlockAssignment instance.
+     *
+     * @param configuration The backup configuration
+     * @param blockDownloader The block downloader
+     * @param metadataRepository The metadata repository
+     * @param fileBlockUploader The file block uploader
+     * @param fileSystemAccess The file system access
+     * @param identity The encryption identity
+     * @return A configured EncryptedSmallBlockAssignment instance
+     */
     @Provides
     @Singleton
     public EncryptedSmallBlockAssignment encryptedSmallBlockAssignment(BackupConfiguration configuration,
@@ -163,12 +262,25 @@ public class BackupModule extends AbstractModule {
                 configuration.getProperty("smallFileBlockAssignment.targetSize", DEFAULT_SMALL_FILE_TARGET_SIZE));
     }
 
+    /**
+     * Provides a singleton UploadScheduler instance.
+     *
+     * @param uploadScheduler The UploadSchedulerImpl instance
+     * @return The UploadScheduler interface implementation
+     */
     @Provides
     @Singleton
     public UploadScheduler uploadScheduler(UploadSchedulerImpl uploadScheduler) {
         return uploadScheduler;
     }
 
+    /**
+     * Provides a singleton UploadSchedulerImpl instance.
+     *
+     * @param configuration The backup configuration
+     * @param rateLimitController The rate limit controller
+     * @return A configured UploadSchedulerImpl instance
+     */
     @Provides
     @Singleton
     public UploadSchedulerImpl uploadScheduler(BackupConfiguration configuration,
@@ -182,6 +294,16 @@ public class BackupModule extends AbstractModule {
         return new UploadSchedulerImpl(threads, rateLimitController);
     }
 
+    /**
+     * Provides a singleton FileBlockUploaderImpl instance.
+     *
+     * @param configuration The backup configuration
+     * @param repository The metadata repository
+     * @param uploadScheduler The upload scheduler
+     * @param manifestManager The manifest manager
+     * @param encryptionIdentity The encryption identity
+     * @return A configured FileBlockUploaderImpl instance
+     */
     @Provides
     @Singleton
     public FileBlockUploaderImpl fileBlockUploader(BackupConfiguration configuration,
@@ -193,12 +315,27 @@ public class BackupModule extends AbstractModule {
                 encryptionIdentity);
     }
 
+    /**
+     * Provides a singleton FileBlockUploader instance.
+     *
+     * @param uploader The FileBlockUploaderImpl instance
+     * @return The FileBlockUploader interface implementation
+     */
     @Provides
     @Singleton
     public FileBlockUploader fileBlockUploader(FileBlockUploaderImpl uploader) {
         return uploader;
     }
 
+    /**
+     * Provides a singleton LargeFileBlockAssignment instance.
+     * Returns either a raw or gzip implementation based on configuration.
+     *
+     * @param configuration The backup configuration
+     * @param raw The raw large file block assignment
+     * @param gzip The gzip large file block assignment
+     * @return The appropriate LargeFileBlockAssignment implementation
+     */
     @Provides
     @Singleton
     public LargeFileBlockAssignment largeFileBlockAssignment(@Named(SOURCE_CONFIG) BackupConfiguration configuration,
@@ -210,6 +347,18 @@ public class BackupModule extends AbstractModule {
         return gzip;
     }
 
+    /**
+     * Provides a singleton GzipLargeFileBlockAssignment instance.
+     *
+     * @param configuration The backup configuration
+     * @param metadataRepository The metadata repository
+     * @param fileBlockUploader The file block uploader
+     * @param blockDownloader The block downloader
+     * @param fileSystemAccess The file system access
+     * @param machineState The machine state
+     * @param identity The encryption identity
+     * @return A configured GzipLargeFileBlockAssignment instance
+     */
     @Provides
     @Singleton
     public GzipLargeFileBlockAssignment gzipLargeFileBlockAssignment(BackupConfiguration configuration,
@@ -224,6 +373,17 @@ public class BackupModule extends AbstractModule {
                 metadataRepository, machineState, identity, maxSize);
     }
 
+    /**
+     * Provides a singleton BlockValidator instance.
+     *
+     * @param repository The metadata repository
+     * @param configuration The backup configuration
+     * @param destinationBlockProcessor The destination block processor
+     * @param manifestManager The manifest manager
+     * @param statsLogger The stats logger
+     * @param manifestLocation The manifest location
+     * @return A configured BlockValidator instance
+     */
     @Provides
     @Singleton
     public BlockValidator blockValidator(MetadataRepository repository,
@@ -237,6 +397,18 @@ public class BackupModule extends AbstractModule {
                 statsLogger, maxBlockSize, manifestLocation);
     }
 
+    /**
+     * Provides a singleton RawLargeFileBlockAssignment instance.
+     *
+     * @param configuration The backup configuration
+     * @param metadataRepository The metadata repository
+     * @param fileBlockUploader The file block uploader
+     * @param blockDownloader The block downloader
+     * @param fileSystemAccess The file system access
+     * @param machineState The machine state
+     * @param identity The encryption identity
+     * @return A configured RawLargeFileBlockAssignment instance
+     */
     @Provides
     @Singleton
     public RawLargeFileBlockAssignment rawLargeFileBlockAssignment(BackupConfiguration configuration,
@@ -251,6 +423,23 @@ public class BackupModule extends AbstractModule {
                 metadataRepository, machineState, identity, maxSize);
     }
 
+    /**
+     * Provides a singleton ManifestManagerImpl instance.
+     *
+     * @param configuration The backup configuration
+     * @param manifestLocation The manifest location
+     * @param rateLimitController The rate limit controller
+     * @param serviceManager The service manager
+     * @param installationIdentity The installation identity
+     * @param source The additional source
+     * @param encryptionIdentity The encryption identity
+     * @param commandLine The command line
+     * @param statsLogger The stats logger
+     * @param additionalManifestManager The additional manifest manager
+     * @param uploadScheduler The upload scheduler
+     * @return A configured ManifestManagerImpl instance
+     * @throws IOException If there's an error initializing the manifest manager
+     */
     @Singleton
     @Provides
     public ManifestManagerImpl manifestManagerImplementation(@Named(SOURCE_CONFIG) BackupConfiguration configuration,
@@ -280,6 +469,15 @@ public class BackupModule extends AbstractModule {
                 uploadScheduler);
     }
 
+    /**
+     * Provides a singleton AdditionalManifestManager instance.
+     *
+     * @param source The additional source
+     * @param config The backup configuration
+     * @param rateLimitController The rate limit controller
+     * @param uploadScheduler The upload scheduler
+     * @return A configured AdditionalManifestManager instance
+     */
     @Provides
     @Singleton
     public AdditionalManifestManager additionalManifestManager(@Named(ADDITIONAL_SOURCE) String source,
@@ -292,12 +490,25 @@ public class BackupModule extends AbstractModule {
         return new AdditionalManifestManager(config, rateLimitController, uploadScheduler);
     }
 
+    /**
+     * Provides a singleton ManifestManager instance.
+     *
+     * @param manifestManager The ManifestManagerImpl instance
+     * @return The ManifestManager interface implementation
+     */
     @Provides
     @Singleton
     public ManifestManager manifestManager(ManifestManagerImpl manifestManager) {
         return manifestManager;
     }
 
+    /**
+     * Provides a singleton LockingMetadataRepository instance.
+     *
+     * @param dbPath The repository database path
+     * @param source The additional source
+     * @return A configured LockingMetadataRepository instance
+     */
     @Singleton
     @Provides
     public LockingMetadataRepository lockingMetadataRepository(@Named(REPOSITORY_DB_PATH) String dbPath,
@@ -305,6 +516,13 @@ public class BackupModule extends AbstractModule {
         return new LockingMetadataRepository(dbPath, !Strings.isNullOrEmpty(source));
     }
 
+    /**
+     * Provides the repository database path.
+     *
+     * @param manifestLocation The manifest location
+     * @param source The additional source
+     * @return The path to the repository database
+     */
     @Named(REPOSITORY_DB_PATH)
     @Singleton
     @Provides
@@ -325,6 +543,16 @@ public class BackupModule extends AbstractModule {
         return metadataRoot.toString();
     }
 
+    /**
+     * Provides a singleton LoggingMetadataRepository instance.
+     *
+     * @param repository The locking metadata repository
+     * @param manifest The manifest manager
+     * @param configuration The backup configuration
+     * @param commandLine The command line
+     * @param source The additional source
+     * @return A configured LoggingMetadataRepository instance
+     */
     @Singleton
     @Provides
     public LoggingMetadataRepository loggingMetadataRepository(LockingMetadataRepository repository,
@@ -344,30 +572,68 @@ public class BackupModule extends AbstractModule {
                 false);
     }
 
+    /**
+     * Provides a singleton BackupStatsLogger instance.
+     *
+     * @param configuration The backup configuration
+     * @param manifestLocation The manifest location
+     * @return A configured BackupStatsLogger instance
+     */
     @Singleton
     @Provides
     public BackupStatsLogger backupStatsLogger(BackupConfiguration configuration, @Named(MANIFEST_LOCATION) String manifestLocation) {
         return new BackupStatsLogger(configuration, manifestLocation);
     }
 
+    /**
+     * Provides a singleton MetadataRepository instance.
+     *
+     * @param loggingMetadataRepository The logging metadata repository
+     * @return The MetadataRepository interface implementation
+     */
     @Singleton
     @Provides
     public MetadataRepository metadataRepository(LoggingMetadataRepository loggingMetadataRepository) {
         return loggingMetadataRepository;
     }
 
+    /**
+     * Provides a singleton LogConsumer instance.
+     *
+     * @param metadataRepository The logging metadata repository
+     * @return The LogConsumer interface implementation
+     */
     @Singleton
     @Provides
     public LogConsumer logConsumer(LoggingMetadataRepository metadataRepository) {
         return metadataRepository;
     }
 
+    /**
+     * Provides a singleton RateLimitController instance.
+     *
+     * @param configuration The backup configuration
+     * @return A configured RateLimitController instance
+     */
     @Provides
     @Singleton
     public RateLimitController rateLimitController(BackupConfiguration configuration) {
         return new RateLimitController(configuration.getLimits());
     }
 
+    /**
+     * Provides a singleton DestinationBlockProcessor instance.
+     *
+     * @param threads The number of download threads
+     * @param commandLine The command line
+     * @param fileDownloader The file downloader
+     * @param uploadScheduler The upload scheduler
+     * @param configuration The backup configuration
+     * @param manifestManager The manifest manager
+     * @param repository The metadata repository
+     * @param encryptionIdentity The encryption identity
+     * @return A configured DestinationBlockProcessor instance
+     */
     @Singleton
     @Provides
     public DestinationBlockProcessor blockRefresher(@Named(DOWNLOAD_THREADS) int threads,
@@ -382,6 +648,16 @@ public class BackupModule extends AbstractModule {
                 fileDownloader, uploadScheduler, configuration, repository, manifestManager, encryptionIdentity);
     }
 
+    /**
+     * Provides a singleton FileChangeWatcherImpl instance.
+     *
+     * @param configuration The backup configuration
+     * @param repository The metadata repository
+     * @param continuousBackup The continuous backup service
+     * @param machineState The machine state
+     * @param manifestLocation The manifest location
+     * @return A configured FileChangeWatcherImpl instance
+     */
     @Singleton
     @Provides
     public FileChangeWatcherImpl fileChangeWatcher(BackupConfiguration configuration,
@@ -392,12 +668,27 @@ public class BackupModule extends AbstractModule {
         return new FileChangeWatcherImpl(configuration, repository, continuousBackup, manifestLocation, machineState);
     }
 
+    /**
+     * Provides a singleton FileChangeWatcher instance.
+     *
+     * @param fileChangeWatcher The FileChangeWatcherImpl instance
+     * @return The FileChangeWatcher interface implementation
+     */
     @Singleton
     @Provides
     public FileChangeWatcher fileChangeWatcher(FileChangeWatcherImpl fileChangeWatcher) {
         return fileChangeWatcher;
     }
 
+    /**
+     * Provides a singleton ContinuousBackupImpl instance.
+     *
+     * @param repository The metadata repository
+     * @param fileConsumer The file consumer
+     * @param backupConfiguration The backup configuration
+     * @param machineState The machine state
+     * @return A configured ContinuousBackupImpl instance
+     */
     @Singleton
     @Provides
     public ContinuousBackupImpl continuousBackup(MetadataRepository repository, FileConsumer fileConsumer,
@@ -405,12 +696,25 @@ public class BackupModule extends AbstractModule {
         return new ContinuousBackupImpl(repository, fileConsumer, machineState, backupConfiguration);
     }
 
+    /**
+     * Provides a singleton ContinuousBackup instance.
+     *
+     * @param continuousBackup The ContinuousBackupImpl instance
+     * @return The ContinuousBackup interface implementation
+     */
     @Singleton
     @Provides
     public ContinuousBackup continuousBackup(ContinuousBackupImpl continuousBackup) {
         return continuousBackup;
     }
 
+    /**
+     * Provides a singleton FileSystemAccess instance.
+     * Returns an appropriate implementation based on the operating system and configuration.
+     *
+     * @param configuration The backup configuration
+     * @return An appropriate FileSystemAccess implementation
+     */
     @Provides
     @Singleton
     public FileSystemAccess fileSystemAccess(BackupConfiguration configuration) {
